<resources>
    <string name="app_name">CS321PartApp</string>
    <string name="title">Auto Part Pricer</string>
    <string name="KeySearchText">Keyword Search</string>
    <string name="CatSearchText">Category Search</string>
    <string name="CarSetText">Edit Car Settings</string>
    <string name="KeySearchTitle">Keyword Search</string>
    <string name="KeyHintText">Enter Keyword Here...</string>
    <string name="SearchText">Search</string>
    <string name="engine">Engine</string>
    <string name="engParts">Engine Parts</string>
    <string name="eleParts">electrical Parts</string>
    <string name="carSetTitle">Car Settings</string>
    <string name="yearHint">Year</string>
    <string name="makeHint">Make</string>
    <string name="modelHint">Model</string>
    <string name="CarYearHint">Year</string>
    <string name="quickTitle">Quick Search</string>
    <string name="filter">Filters</string>
    <string name="fluid">Fluids</string>
    <string name="sensor">Sensors</string>
    <string name="ele">Electrical</string>
    <string name="part">Parts</string>
    <string name="CarPopNone">No Car Information Selected:\nClick Edit Car Settings to Add a Car</string>
    <string name="engOil">Engine Oil</string>
    <string name="transFluid">Transmission Fluid</string>
    <string name="pwrFluid">Power Steering Fluid</string>
    <string name="brFld">Brake Fluid</string>
    <string name="coolFld">Coolant</string>
    <string name="o2sen">O2 Sensor</string>
    <string name="mafSen">Mass Airflow Sensor</string>
    <string name="tempSen">Temperature Sensor</string>
    <string name="rBulb">Rear Bulb</string>
    <string name="fBulb">Front Bulb</string>
    <string name="plugWire">Spark Plug Wire</string>
    <string name="startMot">Starter Motor</string>
    <string name="plug">Spark Plug</string>
    <string name="alter">Alternator</string>
    <string name="bat">Battery</string>
    <string name="bPad">Brake Pad</string>
    <string name="bDisk">Brake Disk</string>
    <string name="thermstat">Coolant Thermostat</string>
    <string name="radiator">Radiator</string>
    <string name="radHose">Radiator Hoses</string>
    <string name="fPump">Fuel Pump</string>
    <string name="wBlades">Wiper Blades</string>
    <string name="oFilt">Oil Filter</string>
    <string name="aFilt">Air Filter</string>
    <string name="fFilt">Fuel Filter</string>
    <string name="CarSetPlacehold">Year: none Make: none Model: none</string>
    <string name="save">Save</string>
    <string name="C1">Car 1</string>
    <string name="C2">Car 2</string>
    <string name="C3">Car 3</string>
    <string name="C4">Car 4</string>
    <string name="AppTitle">Auto Part Picker</string>
</resources>
